--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,11 @@
-# must be unique in a given SonarQube instance
-sonar.projectKey=my-test
-# - - optional properties - -
-# defaults to project key
-sonar.projectName=My Test
-# defaults to 'not provided'
-#sonar.projectVersion=1.0
-# Path is relative to the sonar-project.properties file. Defaults to .
-#sonar.sources=.
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.projectKey=sample-app
+sonar.projectName=sample-app
+sonar.projectVersion=1.0-SNAPSHOT
+# path to source directories (required)
+sonar.sources=./
+# The value of the property must be the key of the language.
+sonar.language=js
+
+#sonar.profile=node
+# Encoding of the source code
+sonar.sourceEncoding=UTF-8
