--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,3 +9,5 @@ sonar.language=js
 #sonar.profile=node
 # Encoding of the source code
 sonar.sourceEncoding=UTF-8
+sonar.web.javaOpts: "-Xmx1024m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError"
+sonar.ce.javaOpts: "-Xmx1024m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError"
