--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,5 +9,5 @@ sonar.language=js
 #sonar.profile=node
 # Encoding of the source code
 sonar.sourceEncoding=UTF-8
-sonar.web.javaOpts: "-Xmx1024m -XX:+HeapDumpOnOutOfMemoryError"
-sonar.ce.javaOpts: "-Xmx1024m -XX:+HeapDumpOnOutOfMemoryError"
+sonar.web.javaOpts="-Xmx1024m -XX:+HeapDumpOnOutOfMemoryError"
+sonar.ce.javaOpts="-Xmx1024m -XX:+HeapDumpOnOutOfMemoryError"
