--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=sample-app
-sonar.projectName=sample-app
+sonar.projectKey=sample-app-1
+sonar.projectName=sample-app-1
 sonar.projectVersion=1.0-SNAPSHOT
 # path to source directories (required)
 sonar.sources=./
